<?xml version="1.0"?>
<package format="3">
  <name>point_cloud_storer</name>
  <version>0.0.0</version>
  <description>The point_cloud_storer package</description>
  <maintainer email="arijun0307@gmail.com">Jumpei Arima</maintainer>


  <license>BSD-3-Clause License</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>
  <depend>eigen</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>

</package>
